--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glosery List</title>
+    <title>Grocery List</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> 
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <center><h1>GLOSERY LIST</h1></center>
+        <center><h1>GROCERY LIST</h1></center>
         <div id="newtask">
             <input type="text"  id="text" placeholder="Add things...">
             <button id="add"><b>Add</b></button>
